# PyHRG

./: .gitignore  pyproject.toml
pyhrg/: __init__.py  hrg.py
pyhrg.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
